[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "led"
path = "src/bin/led.rs"

[[bin]]
name = "print"
path = "src/bin/print.rs"

[target.arrch64-unknown-linux-gnu]
linker = "arrch64-unknowlinux-gnu-gcc"

[dependencies]
c2_mmap_gpio = "0.2.1"
# gpio = "0.4.1"
# rust_gpiozero = "0.2.1"